# hellfire-renderer

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake
resources/Shaders/: coloredTriangle.frag  coloredTriangle.vert  coloredTriangleMesh.vert  coloredTriangleMesh.vert.spv  gradient.comp  sky.comp
src/: Main.cpp  VkContext.cpp  VkContext.hpp  VkDescriptors.cpp  VkDescriptors.hpp  VkEngine.cpp  VkEngine.hpp  VkImage.cpp  VkImage.hpp  VkPipeline.cpp  VkPipeline.hpp  VkSwapChain.cpp  VkSwapChain.hpp  VkTypes.hpp
